test/tests/stages/5_local_variables/valid/add_variables.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(first_variable)
  =
  const int(1)
  ;
  int
  identifier(second_variable)
  =
  const int(2)
  ;
  return
  identifier(first_variable)
  +
  identifier(second_variable)
  ;
  }
