test/tests/stages/5_local_variables/invalid_semantics/declared_after_use.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(a)
  =
  const int(1)
  +
  const int(2)
  ;
  int
  identifier(a)
  ;
  return
  identifier(a)
  ;
  }
